# OS_labs

./: .gitignore  CMakeLists.txt
CP/: CMakeLists.txt  run.sh
CP/doc/: report CP.docx
CP/include/: graph.h  message.h
CP/src/: graph.cpp  job.cpp  message.cpp  scheduler.cpp
CP/test/: test1.json  test3.json  test4.json
lab1/: child.c  daughter.c  numbers.txt  parent.c  report.docx
lab2/: main.c  report.docx
lab3/: child.c  main.c
lab3/doc/: report 3.docx
lab3/src/: child.c  main.c
lab4/: CMakeLists.txt  run_prog1.sh  run_prog2.sh
lab4/doc/: report 4.docx
lab4/src/: Makefile  bubble_sort.c  der1.c  der2.c  prog_dynamic.c  prog_static.c  quick_sort.c  run_prog1.sh  run_prog2.sh
lab5-7/: CMakeLists.txt
lab5-7/doc/: report 5.docx
lab5-7/include/: common.h  message.h  nodes.h
lab5-7/src/: common.cpp  computing_node.cpp  control_node.cpp  nodes.cpp
lab8/doc/: report8.docx
